editing navigation bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 <nav class="navbar">
 
-<h2 class="logo">My Campus</h2>
+<h2 class="logo">Ihozo's Campus</h2>
 
 <ul class="nav-links">
 
